--- a/question/В чем отличие стрелочной функции от функционального декларирования..md
+++ b/question/В чем отличие стрелочной функции от функционального декларирования..md
@@ -1,2 +1,1 @@
-  
-Стрелочные функции не имеют собственного this (берут из лексического окружения), не имеют arguments, не могут быть конструкторами (new).   Имеют краткий синтаксис
+Cтрелочные функции не имеют собственного this (берут из лексического окружения), не имеют arguments, не могут быть конструкторами (new).   Имеют краткий синтаксис
