--- a/question/Что такое промисы. Зачем нужны. Что такое async.await..md
+++ b/question/Что такое промисы. Зачем нужны. Что такое async.await..md
@@ -1,1 +1,1 @@
-Promise — это объект, представляющий результат асинхронной операции. У него три состояния: pending, fulfilled, rejected. Создается через `new Promise(resolve, reject)`, где `resolve` и `reject` переводят в соответствующие состояния. Получить результат можно через `.then()`, ошибку — через `.catch()`, а `.finally()` выполняется всегда. Промисы позволяют строить цепочки асинхронных вызовов и избегать callback-ада. С `async/await` код становится проще: `await` ждет результата промиса, а `try/catch` ловит ошибки. Промисы работают через микрозадачи, что делает их предсказуемее `setTimeout`.
+**Promise** — это объект, представляющий асинхронную операцию с тремя состояниями (pending, fulfilled, rejected), позволяющий удобно обрабатывать результаты через методы `.then()`, `.catch()`, и `.finally()`, а также облегчая работу с асинхронным кодом с использованием `async/await`.
