--- a/question/Как скопировать объект..md
+++ b/question/Как скопировать объект..md
@@ -1,8 +1,3 @@
+**Поверхностное копирование**: используется, когда объект не содержит вложенных объектов: - `Object.assign` — `Object.assign({}, originalObject)` - Оператор расширения (spread) — `{ ...originalObject }`
 
- **Поверхностное копирование**: используется, когда объект не содержит вложенных объектов:
-    - `Object.assign` — `Object.assign({}, originalObject)`
-    - Оператор расширения (spread) — `{ ...originalObject }`
-    
-**Глубокое копирование**: используется для объектов с вложенными объектами:
-    - `JSON.parse(JSON.stringify(originalObject))` — простой, но может терять методы и undefined.
-    - `structuredClone(originalObject)` — современный метод, который сохраняет методы и не теряет свойства.
+**Глубокое копирование**: используется для объектов с вложенными объектами: - `JSON.parse(JSON.stringify(originalObject))` — простой, но может терять методы и undefined. - `structuredClone(originalObject)` — современный метод, который сохраняет методы и не теряет свойства.
